--- a/Begium.Web/Views/Home/Index.cshtml
+++ b/Begium.Web/Views/Home/Index.cshtml
@@ -20,9 +20,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.3.2/react-dom.js"></script>
     @*<script src="https://cdnjs.cloudflare.com/ajax/libs/remarkable/1.7.1/remarkable.min.js"></script>*@
 
-    @Scripts.Render("~/bundles/main")
-    @*<script src="@Url.Content("~/Scripts/showdown.min.js")"></script>
-    <script src="@Url.Content("~/Scripts/Tutorial.jsx")"></script>*@
+    <script src="@Url.Content("~/Scripts/showdown.min.js")"></script>
+    <script src="@Url.Content("~/Scripts/Tutorial.jsx")"></script>
     @Html.ReactInitJavaScript()
 </body>
 </html>
