--- a/Begium.Web/Content/main.css
+++ b/Begium.Web/Content/main.css
@@ -43,6 +43,18 @@ textarea {
     border-radius:3px;
 }
 
+.be-nav li:last-child a{
+    background-color:rgb(249,208,33); 
+    border-color:rgb(249,208,33); 
+    color:black;
+}
+
+.be-nav li:last-child a i{
+    -ms-transform: rotate(45deg); /* IE 9 */
+    -webkit-transform: rotate(45deg); /* Chrome, Safari, Opera */
+    transform: rotate(45deg);
+}
+
 .be-nav li a:hover{
     cursor:pointer;
 }
@@ -53,4 +65,11 @@ textarea {
     height: 100%;
     max-height: 40px;
     width: auto;
+}
+
+.avatar{
+    position: relative;
+    top: -15px;
+    width:60px;
+    height:60px;
 }
