--- a/Begium.Web/Views/Shared/_Layout.cshtml
+++ b/Begium.Web/Views/Shared/_Layout.cshtml
@@ -26,6 +26,12 @@
                 </ul>
             </div>
             <div class="col-md-4 col-xs-6">
+                <div class="col-md-8">
+                    <input type="text" class="form-control" placeholder="Search">
+                </div>
+                <div class="col-md-4">
+                    <img class="img-circle avatar" src="~/images/avatar.jpg"/>
+                </div>
             </div>
         </nav>
     </header>
