--- a/Begium.Web/Views/Shared/_Layout.cshtml
+++ b/Begium.Web/Views/Shared/_Layout.cshtml
@@ -64,7 +64,7 @@
             </div>
 
             <div class="row col-md-12 margin-0 padding-0 copyrights-logo">
-                <a href="/">
+                <a href="@Url.Action("Index")">
                     <img src="//www.2dehands.be/css/3164/images/2dehands-be_logo-white.svg" alt="Het grootste aanbod koopjes vindt u op 2dehands.be. De gratis zoekertjessite voor tweedehands en nieuwe artikelen.">
                 </a>
             </div>
